--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>Wolfe Tamagotchi Game</h1>
     <div id='wolfie'>
       <div id="wolfieImage">
         <img src="https://i.imgur.com/RHnnBBA.png" class="pet" id="pet">
       </div>
     </div>
     Hunger:<div class="hunger" id="hunger">10</div>
+    <button id="feedButton" class="feedButton">Feed</button>
+    <br>
     Sleepiness:<div class="sleepiness" id="sleepiness">10</div>
+    <button id="sleepButton" class="sleepButton">Sleep</button>
+    <br>
     Boredom:<div class="boredom" id="boredom">10</div>
+    <button id="playButton" class="playButton">Play</button>
+    <br>
     Age:<div class="age" id="age"></div>
 
 
@@ -21,7 +28,7 @@
 
 
 
-    <script type="text/javascript"src="app.js"></script>
+    <script type="text/javascript"src="js/app.js"></script>
 
   </body>
 </html>
