Buttons work for each stat, age is incrementing

--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
   </head>
   <body>
     <h1>Wolfe Tamagotchi Game</h1>
-    <div id='wolfie'>
-      <div id="wolfieImage">
-        <img src="https://i.imgur.com/RHnnBBA.png" class="pet" id="pet">
-      </div>
-    </div>
+    <button id="buttonBegin" class="buttonBegin">Start</button>
+    <br>
+    <br>
+
+    <div class="name" id="name">Enter your pets name:</div>
+    <br>
     Hunger:<div class="hunger" id="hunger">10</div>
     <button id="feedButton" class="feedButton">Feed</button>
     <br>
+
     Sleepiness:<div class="sleepiness" id="sleepiness">10</div>
     <button id="sleepButton" class="sleepButton">Sleep</button>
     <br>
+
     Boredom:<div class="boredom" id="boredom">10</div>
-    <button id="playButton" class="playButton">Play</button>
+    <button id="playButton" class="boredomButton">Play</button>
     <br>
-    Age:<div class="age" id="age"></div>
+
+    Age:<div class="age" id="age">0</div>
+
+    <div id='wolfie'>
+      <div id="wolfieImage" class="wolfieImage">
+        <img src="https://i.imgur.com/RHnnBBA.png" class="pet" id="pet">
+      </div>
+    </div>
 
 
 
