--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <br>
 
     Age:<div class="age" id="age">0</div>
-
+    <br>
+    <br>
     <div id='wolfie'>
-      <div id="wolfieImage" class="wolfieImage">
+      <div id="wolfieImageDiv" class="wolfieImageDiv">
         <img src="https://i.imgur.com/RHnnBBA.png" class="pet" id="pet">
       </div>
     </div>
