Updated Css and Buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
     <div class="name" id="name">Enter your pets name:</div>
     <br>
+
+    <div class="stats" id="stats">
+
     Hunger:<div class="hunger" id="hunger">10</div>
+
     <button id="feedButton" class="feedButton">Feed</button>
     <br>
 
@@ -22,10 +26,11 @@
     <br>
 
     Boredom:<div class="boredom" id="boredom">10</div>
-    <button id="playButton" class="boredomButton">Play</button>
+    <button id="playButton" class="playButton">Play</button>
     <br>
 
     Age:<div class="age" id="age">0</div>
+  </div>
     <br>
     <br>
     <div id='wolfie'>
