--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Wolfe Tomagatchi</title>
+    <title id="title" class="title">Wolfe Tomagatchi</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -16,24 +16,31 @@
 
     <div class="stats" id="stats">
 
-    Hunger:<div class="hunger" id="hunger">10</div>
+    <div class="hungerWord" id="hungerWord">
+
+    Hunger:</div><div class="hunger" id="hunger">10</div>
 
     <button id="feedButton" class="feedButton">Feed</button>
     <br>
+    <div class="sleepWord" id="sleepWord">
 
-    Sleepiness:<div class="sleepiness" id="sleepiness">10</div>
+      Sleepiness:</div><div class="sleepiness" id="sleepiness">10</div>
     <button id="sleepButton" class="sleepButton">Sleep</button>
     <br>
 
-    Boredom:<div class="boredom" id="boredom">10</div>
+    <div class="boredomWord" id="boredomWord">
+
+      Bordom:</div><div class="boredom" id="boredom">10</div>
     <button id="playButton" class="playButton">Play</button>
     <br>
 
-    Age:<div class="age" id="age">0</div>
+    <div class="ageWord" id="ageWord">
+
+      Age:</div><div class="age" id="age">0</div>
   </div>
     <br>
     <br>
-    <div id='wolfie'>
+    <div id='wolfie' class="wolfie">
       <div id="wolfieImageDiv" class="wolfieImageDiv">
         <img src="https://i.imgur.com/RHnnBBA.png" class="pet" id="pet">
       </div>
