Minor bug fixes, updated color of numbers, background and transformation pictures

--- a/index.html
+++ b/index.html
@@ -11,32 +11,33 @@
     <br>
     <br>
 
-    <div class="name" id="name">Enter your pets name:</div>
+    <div class="name" id="name">Enter your pets name</div>
     <br>
 
     <div class="stats" id="stats">
+      <br>
 
     <div class="hungerWord" id="hungerWord">
 
-    Hunger:</div><div class="hunger" id="hunger">10</div>
+    Hunger</div><div class="hunger" id="hunger">10</div>
 
     <button id="feedButton" class="feedButton">Feed</button>
     <br>
     <div class="sleepWord" id="sleepWord">
 
-      Sleepiness:</div><div class="sleepiness" id="sleepiness">10</div>
+      Sleepiness</div><div class="sleepiness" id="sleepiness">10</div>
     <button id="sleepButton" class="sleepButton">Sleep</button>
     <br>
 
     <div class="boredomWord" id="boredomWord">
 
-      Bordom:</div><div class="boredom" id="boredom">10</div>
+      Bordom</div><div class="boredom" id="boredom">10</div>
     <button id="playButton" class="playButton">Play</button>
     <br>
 
     <div class="ageWord" id="ageWord">
 
-      Age:</div><div class="age" id="age">0</div>
+      Age</div><div class="age" id="age">0</div>
   </div>
     <br>
     <br>
